<resources>
    <string name="app_name">ELE Clock</string>
    <string name="widget_name">Weather Clock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="startforeground">开始后台定位</string>
    <string name="stopforeground">停止后台定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="diy_call_back">自定义回调</string>
    <string name="diy_call_back_ps">ps:网络定位由于精度低于gps，计算距离会有部分偏差</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail">61 ： GPS定位结果\n
    62 ： 扫描整合定位依据失败。此时定位结果无效。\n
    63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
    65 ： 定位缓存的结果。\n
    66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
    67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
    68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
    161： 表示网络定位结果\n
    162~167： 服务端定位失败\n
    502：key参数错误\n
    505：key不存在或者非法\n
    601：key服务被开发者自己禁用\n
    602：key mcode不匹配\n
    501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈</string>
    <string name="qa_format">邮件格式格式：\n
    1、手机标识（移动联通IMEI，电信MEID）\n
    2、问题发生时间\n
    3、定位类型：失败（给出返回码），或者不准（给出真实位置）等\n
    4、具体描述：细节描述，可以给出问题发生的频率或者APP名称，sdk版本等，也可以加上附件如日志，贴图等\n
    </string>
    <string name="qa_callback_mail">反馈邮箱:loc-bugs@baidu.com</string>

    <string name="city_manager">City manager</string>
    <string name="delete">Delete</string>
    <string name="delete_city">Delete %1s?</string>
    <string name="add_city">Add %1s?</string>
    <string name="set_international_city">set international city</string>
    <string name="update_location_city">Update gps city to %1s?</string>
    <string name="add_city_title">Add city</string>
    <string name="city_name_hint">City name</string>
    <string name="city_not_found">Can not find city.</string>
    <string name="weather_not_found">Can not find weather.</string>
    <string name="city_max_toast">Maximum %1s cities.</string>
    <string name="progress_refresh">updating...</string>
    <string name="weather">Weather</string>
    <string name="clock_24_hours_format" translatable="false">kk:mm</string>
    <string name="main_widget_12_hours_format" translatable="false">h:mm</string>
    <string name="weather_data_default">Unknown</string>
    <string name="refresh_time">Refresh time:\n%1s</string>
    <string name="toast_wifi_only_mode">Wifi only mode.</string>
    <string name="toast_net_inavailable">Net is not available.</string>
    <string name="menu_auto_refresh">Auto Updates</string>
    <string name="menu_auto_refresh_6h">Every 6H</string>
    <string name="menu_auto_refresh_12h">Every 12H</string>
    <string name="menu_auto_refresh_24h">Every 24H</string>
    <string name="menu_wifi_only">WIFI only</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_breezy">Breezy</string>
    <string name="weather_windy">Windy</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_clear">Clear</string>
    <string name="weather_showers">Showers</string>
    <string name="weather_snow_showers">Snow showers</string>
    <string name="weather_thunderstorms">Thunderstorms</string>
    <string name="weather_rain">Rain</string>
    <string name="weather_rain_and_snow">Rain and snow</string>
    <string name="search_error">Network anomaly, please try again!</string>
    <string name="refresh_error">No Citys Found!</string>

    <string name="weather_tornado">Tornado</string>
    <string name="weather_tropical">Tropical Storm</string>
    <string name="weather_hurricane">Hurricane</string>
    <string name="weather_severe">Severe Thunderstorms</string>
    <string name="weather_rain_sleet">Mixed rain and sleet</string>
    <string name="weather_snow_sleet">Mixed snow and sleet</string>
    <string name="weather_fdrizzle">Freezing drizzle</string>
    <string name="weather_drizzle">Drizzle</string>
    <string name="weather_freezing">Freezing rain</string>
    <string name="weather_blowing">Blowing snow</string>
    <string name="weather_snow">Snow</string>
    <string name="weather_hail">Hail</string>
    <string name="weather_sleet">Sleet</string>
    <string name="weather_dust">Dust</string>
    <string name="weather_foggy">Foggy</string>
    <string name="weather_haze">Haze</string>
    <string name="weather_smoky">Smoky</string>
    <string name="weather_cold">Cold</string>
    <string name="weather_mixed">Mixed rain and hail</string>
    <string name="weather_hot">Hot</string>
    <string name="menu_auto_refresh_on_off">Closed</string>
    <string name="weather_snow_scattered">Snow showers</string>
    <string name="item_click">Long press this to delete!</string>
</resources>
