<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/menu_width"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical"
    android:paddingStart="@dimen/menu_padding_start"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_item_height"
        android:layout_marginEnd="@dimen/menu_item_marginEnd"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_auto_refresh"
            android:layout_marginEnd="@dimen/refresh_view_padding_end" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/menu_auto_refresh"
            android:textColor="@color/text_color"
            android:textSize="@dimen/expand_text_size" />

        <LinearLayout
            android:id="@+id/show_menu"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/update_text_color"
                android:text="@string/menu_auto_refresh_on_off"
                android:layout_marginLeft="@dimen/menu_expand_margin_left"
                android:textSize="@dimen/menu_textview_size" />

            <ImageView
                android:id="@+id/expand_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/expand"
                android:layout_marginLeft="@dimen/menu_expand_margin_left" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_auto_refresh"
            android:gravity="center_vertical"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/menu_check_auto_refresh"
                android:layout_marginTop="@dimen/switch_for_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/bottom_line"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:background="@color/bottom_line"
        android:layout_height="0.5dp" />

    <com.android.wty.widgetother.view.ExpandView
        android:id="@+id/expandView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:clickable="true" />

    <View
        android:background="@color/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp" />

    <LinearLayout
        android:id="@+id/menu_wifi_only"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_item_height"
        android:layout_marginEnd="@dimen/menu_item_marginEnd"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_wifi_only"
            android:layout_marginEnd="@dimen/wifi_view_padding_end" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/menu_wifi_only"
            android:textColor="@color/text_color"
            android:textSize="@dimen/main_view_text_size" />

        <Switch
            android:id="@+id/menu_check_wifi_only"
            android:layout_marginTop="@dimen/switch_for_a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track" />
    </LinearLayout>

    <View
        android:background="@color/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp" />

    <LinearLayout
        android:id="@+id/menu_set_city"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_item_height"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_set_city"
            android:layout_marginEnd="@dimen/wifi_view_padding_end" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_manager"
            android:textColor="@color/text_color"
            android:textSize="@dimen/main_view_text_size" />

    </LinearLayout>

</LinearLayout>
